force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount_Paid__c</fullName>
    <description>TotalAmt of Payment</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>