force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Created_in_QBO_Date__c</fullName>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>