force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>