force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Memo__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Memo__c</fullName>
    <label>Memo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>