force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/fields/breadwinner_qbo__Vendor__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Bill Payments</relationshipLabel>
    <relationshipName>Bill_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>