force-app/main/default/objects/breadwinner_qbo__BW_AP_Bill_Payment__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Vendor__c</columns>
    <columns>breadwinner_qbo__Payment_Date__c</columns>
    <columns>breadwinner_qbo__Amount_Paid__c</columns>
    <columns>breadwinner_qbo__Reference_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>